--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -34,4 +34,14 @@ body * {
   min-height: 100vh;
 }
 
+@keyframes stripesAnimation {
+  from {
+    background-position: 0px 0px;
+  }
+
+  to {
+    background-position: -460px 0px;
+  }
+}
+
 @media (prefers-color-scheme: light) {}
